--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="header">
         <nav>
             <div class="logo">
-                <img src="/logo.png">
+                <img src="logo.png">
                 <span>V I P Watch.</span>
 
             </div>
